# Generated by Django 5.2 on 2025-05-31 07:53

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name="UserProfile",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "email_verified",
                    models.BooleanField(default=False, verbose_name="Email Doğrulandı"),
                ),
                (
                    "verification_code",
                    models.CharField(
                        blank=True,
                        max_length=6,
                        null=True,
                        verbose_name="Doğrulama Kodu",
                    ),
                ),
                (
                    "verification_expires",
                    models.DateTimeField(
                        blank=True, null=True, verbose_name="Kod Geçerlilik Süresi"
                    ),
                ),
                (
                    "verification_attempts",
                    models.IntegerField(default=0, verbose_name="Doğrulama Denemeleri"),
                ),
                (
                    "last_verification_request",
                    models.DateTimeField(
                        blank=True, null=True, verbose_name="Son Kod İsteği"
                    ),
                ),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
                (
                    "user",
                    models.OneToOneField(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="profile",
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
            ],
            options={
                "verbose_name": "Kullanıcı Profili",
                "verbose_name_plural": "Kullanıcı Profilleri",
            },
        ),
    ]
